<resources>
    <string name="app_name">Kích hoạt bảo hành</string>
    <string name="imei_device">IMEI THIẾT BỊ</string>
    <string name="activate_the_coach_app">Kích hoạt ứng dụng The Coach</string>
    <string name="zalo_support">Zalo hỗ trợ khách hàng</string>
    <string name="title_note_input_phone_number">Vui lòng nhập số điện thoại để kích hoạt 1 năm The Coach</string>
    <string name="small_title_note_input_phone_number">Nhập số điện thoại</string>
    <string name="invalid_phone_number_">Số điện thoại không hợp lệ.</string>
    <string name="activate">Kích hoạt</string>
    <string name="account">Tài khoản</string>
    <string name="pass_new_account">Mật khẩu tài khoản mới là : <b>gioitienganh</b>\n
        \nSố điện thoại đã có mật khẩu của bạn, vui lòng <b>nhập mật khẩu đã có</b></string>
    <string name="activated">Kích hoạt thành công</string>
    <string name="note_activated">Chúc mừng con đã kích hoạt tài khoản The Coach 1 năm, hãy cố gắng rèn luyện để học giỏi Tiếng Anh hơn nữa nhé.</string>
    <string name="activated_button">Xem thông tin tài khoản</string>
    <string name="activate_fail_title">Kích hoạt thất bại</string>
    <string name="activate_fail_button">Quay lại</string>
    <string name="input_number">Nhập số điện thoại</string>
</resources>