<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_background" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="36dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img_the_coach" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/regular.ballo.21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_the_coach_app"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_radius_24"
            android:orientation="vertical"
            android:padding="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/regular.18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imei_device"
                android:textColor="@color/N900" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_imei"
                style="@style/medium.24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/N900"
                tools:text="493873271837219" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_radius_24"
            android:orientation="vertical"
            android:padding="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/regular.18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_note_input_phone_number" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_Til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_note_input_phone_number"
                app:hintTextAppearance="@style/regular.18"
                app:hintTextColor="@color/N700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText"
                    style="@style/medium.20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/N900" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_valid_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/invalid_phone_number_"
            android:textColor="@color/red_light"
            android:layout_marginTop="4dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_radius_24"
            android:backgroundTint="@color/state_bg_color"
            android:text="@string/activate"
            android:textAllCaps="false"
            android:textColor="@color/state_text_color"
            android:layout_gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingHorizontal="84dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>